# cc_demo

./: .clang-tidy  .gitignore  .gitmodules  BUILD.gn  CMakeLists.txt  LICENSE  README.md
include/: FreeRTOSConfig.h  FreeRTOSConfig.hpp  em_device.h  hello_shared.h  hello_shared.hpp  hello_static.h  hello_static.hpp  main.h
include/Trace_Recorder_Configuration/: trcConfig.h  trcKernelPortConfig.h  trcKernelPortSnapshotConfig.h  trcSnapshotConfig.h
src/: Run-time-stats-utils.c  Run-time-stats-utils.cc  hello.cpp  hello_shared.cc  hello_shared.cpp  hello_static.cc  hello_static.cpp  main.c  main.cc  main.cpp  main.h  main_blinky.c
