executable("hello") {
  sources = [ "src/hello.cpp" ]
  include_dirs = [ "include" ]

  deps = [
    ":hello_shared",
    ":hello_static",
  ]
}

shared_library("hello_shared") {
  sources = [ "src/hello_shared.cpp" ]
  include_dirs = [ "include" ]
  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
}

static_library("hello_static") {
  sources = [ "src/hello_static.cpp" ]
  include_dirs = [ "include" ]
}
