executable("main") {
  sources = [
    "src/main.c",
    "src/main_blinky.c",
    "src/Run-time-stats-utils.c",
  ]
  include_dirs = [
    "include",
    "third_party/freertos/repo/include",
  ]
  libs = [ "winmm" ]

  deps = [
    ":hello_shared",
    ":hello_static",
    "third_party/freertos",
  ]
}

shared_library("hello_shared") {
  sources = [ "src/hello_shared.cpp" ]
  include_dirs = [ "include" ]
  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
}

static_library("hello_static") {
  sources = [ "src/hello_static.cpp" ]
  include_dirs = [ "include" ]
}
